# video-clippy

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
footage/: README.md
studio/: __init__.py  cli.py  paths.py
studio/pipeline/: __init__.py  batch.py  chunk_transcribe.py  toni_template.py
video-use/: .env.example
video-use/helpers/: append_outro.py  audio_corruption.py  gpu_encode.py  grade.py  horizontal_clips.py  render.py  transcribe.py  transcribe_batch.py  transcribe_whisper.py  vertical_face.py
